issue-81 make cursor pointer when hovering over collapsable category

--- a/app/components/businessType-list.component.css
+++ b/app/components/businessType-list.component.css
@@ -58,9 +58,11 @@
     content: '\f107';
 }
 .business-type-title {
+    cursor: pointer;
     position: relative;
 }
 .business-type-title.collapsed::after {
+    cursor: pointer;
     content: '\f105';
 }
 
@@ -69,7 +71,7 @@
     background-color: white;
     /*border: 1px outset white;*/
     /*box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);*/
-    
+
     padding: 5px 5px 15px 5px;
     /*margin-top: 15px;*/
     position: relative;
